--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+    font-family: Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+// TO-DO
+// Trocar fonte do projeto
