inclusao de varias telas e ajustes em varias pontos

--- a/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
+++ b/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
@@ -1,4 +1,4 @@
-.login-container {
+.forget-password-container {
     background-image: url("/assets/images/common/background-base.png");
     background-size: cover;
     background-position: center;
@@ -9,18 +9,12 @@
     height: 100vh;
 }
 
-.login-title {
+.forget-password-title {
     font-size: 2rem;
     margin-bottom: 50px;
 }
 
-.logo-image {
-    display: block;
-    margin: 0 auto;
-    width: 150px;
-}
-
-.login-form {
+.forget-password-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,7 +26,7 @@
     margin-bottom: 1rem;
 }
 
-.input-form-login {
+.input-form-forget-password {
     border-radius: 12px;
     width: 313.5px;
 }
@@ -47,8 +41,17 @@ input {
     font-size: 1rem;
 }
 
-.forgot-password,
-.first-access {
+.reset-password-button {
+    padding: 1rem 2rem;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.login-access {
     text-align: center;
     margin-top: 0.5rem;
     color: darkgreen;
@@ -57,23 +60,12 @@ input {
     margin-top: 30px;
 }
 
-.register {
+.here {
     color: peru;
 }
 
-.login-button {
-    padding: 1rem 2rem;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 10px;
-    margin-top: 10px;
-    font-weight: bold;
-}
-
 @media (max-width: 768px) {
-    .login-title {
+    .forget-password-title {
         font-size: 1.5rem;
     }
 
@@ -81,7 +73,7 @@ input {
         font-size: 0.8rem;
     }
 
-    .login-button {
+    .reset-password-button {
         font-size: 1rem;
     }
 }
