--- a/src/app/modules/initiation/components/welcome/welcome.component.scss
+++ b/src/app/modules/initiation/components/welcome/welcome.component.scss
@@ -1,5 +1,5 @@
 .welcome-container {
-    background-image: url("../../../../../assets/images/welcome/welcome.png");
+    background-image: url("/assets/images/common/background-base.png");
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -35,7 +35,6 @@
     text-align: center;
     padding-bottom: 25px;
 }
-
 
 h1 {
     font-size: 2rem;
