--- a/src/app/modules/core/authentication/components/login/login.component.html
+++ b/src/app/modules/core/authentication/components/login/login.component.html
@@ -1,20 +1,21 @@
 <div class="login-container">
     <h2 class="login-title">
-        <img class="logo-image" src="../../../../../../assets/images/login/estudante.png" alt="Logo"> Trilhas da Sabedoria
+      <img class="logo-image" src="/assets/images/login/estudante.png" alt="Logo"> Trilhas da Sabedoria
     </h2>
-    <form class="login-form">
-        <div class="form-group">
-            <label for="username">Usuário</label>
-            <input type="text" id="username" name="username" placeholder="Digite seu nome de usuário">
-        </div>
-        <div class="form-group">
-            <label for="password">Senha</label>
-            <input type="password" id="password" name="password" placeholder="Digite sua senha">
-        </div>
-        <div class="form-group">
-            <div class="forgot-password">Esqueci minha senha</div>
-            <div class="first-access">Primeiro acesso</div>
-        </div>
-        <button class="login-button">Entrar</button>
+    <form class="login-form" (submit)="login($event, emailInput.value, passwordInput.value)">
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input class="input-form-login" type="email" id="email" name="email" placeholder="Digite seu e-mail" #emailInput required>
+      </div>
+      <div class="form-group">
+        <label for="password">Senha</label>
+        <input class="input-form-login" type="password" id="password" name="password" placeholder="Digite sua senha" #passwordInput required>
+      </div>
+      <button class="login-button">Entrar</button>
+      <div class="form-group">
+        <div class="forgot-password" (click)="goForgetPassword()">Esqueci minha senha</div>
+        <div class="first-access" (click)="goToRegister()">Primeiro acesso? <span class="register">Cadastre-se</span></div>
+      </div>
     </form>
-</div>
+  </div>
+  
