--- a/src/app/modules/core/authentication/components/register/register.component.scss
+++ b/src/app/modules/core/authentication/components/register/register.component.scss
@@ -1,4 +1,4 @@
-.login-container {
+.register-container {
     background-image: url("/assets/images/common/background-base.png");
     background-size: cover;
     background-position: center;
@@ -9,18 +9,12 @@
     height: 100vh;
 }
 
-.login-title {
+.register-title {
     font-size: 2rem;
     margin-bottom: 50px;
 }
 
-.logo-image {
-    display: block;
-    margin: 0 auto;
-    width: 150px;
-}
-
-.login-form {
+.register-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,7 +26,14 @@
     margin-bottom: 1rem;
 }
 
-.input-form-login {
+.form-group-inline {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.input-form-register {
     border-radius: 12px;
     width: 313.5px;
 }
@@ -48,7 +49,7 @@ input {
 }
 
 .forgot-password,
-.first-access {
+.has-registration {
     text-align: center;
     margin-top: 0.5rem;
     color: darkgreen;
@@ -61,7 +62,7 @@ input {
     color: peru;
 }
 
-.login-button {
+.register-button {
     padding: 1rem 2rem;
     background-color: #4CAF50;
     color: white;
@@ -69,11 +70,10 @@ input {
     border: none;
     border-radius: 10px;
     margin-top: 10px;
-    font-weight: bold;
 }
 
 @media (max-width: 768px) {
-    .login-title {
+    .register-title {
         font-size: 1.5rem;
     }
 
@@ -81,7 +81,7 @@ input {
         font-size: 0.8rem;
     }
 
-    .login-button {
+    .register-button {
         font-size: 1rem;
     }
 }
