--- a/src/app/modules/initiation/components/welcome/welcome.component.html
+++ b/src/app/modules/initiation/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div class="welcome-container">
     <div class="container">
-        <img class="logo-image" src="../../../../../../assets/images/login/estudante.png" alt="Logo">
+        <img class="logo-image" src="/assets/images/login/estudante.png" alt="Logo">
         <h1 class="title-rpg">Olá! Seja bem-vindo ao jogo Trilhas da Sabedoria!</h1>
 
         <h3 class="subtitle-rpg">Um RPG educativo para você explore um mundo de conhecimento enquanto se diverte!</h3>
