--- a/src/app/modules/core/authentication/components/login/login.component.scss
+++ b/src/app/modules/core/authentication/components/login/login.component.scss
@@ -70,6 +70,7 @@ input {
     border-radius: 10px;
     margin-top: 10px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
