--- a/src/app/modules/home/components/create-profile/create-profile.component.html
+++ b/src/app/modules/home/components/create-profile/create-profile.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="form-group">
         <label for="state">Estado</label>
-        <input class="input-form-create-profile" type="text" id="state" name="state" placeholder="Digite seu estado" #stateInput required>
+        <input class="input-form-create-profile" type="text" id="state" name="state" placeholder="Digite seu estado" #stateInput required maxlength="2">
       </div>
       <button class="create-profile-button" type="submit">Criar Perfil</button>
     </form>
