--- a/src/app/modules/initiation/components/welcome/welcome.component.scss
+++ b/src/app/modules/initiation/components/welcome/welcome.component.scss
@@ -46,8 +46,9 @@ h1 {
     background-color: #4CAF50;
     color: white;
     font-size: 1.2rem;
-    text-decoration: none;
+    border: none;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
