--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,49 +1,17 @@
-
-// // Custom Theming for Angular Material
-// // For more information: https://material.angular.io/guide/theming
-// @use '@angular/material' as mat;
-// // Plus imports for other components in your app.
-
-// // Include the common styles for Angular Material. We include this here so that you only
-// // have to load a single css file for Angular Material in your app.
-// // Be sure that you only ever include this mixin once!
-// @include mat.core();
-
-// // Define the palettes for your theme using the Material Design palettes available in palette.scss
-// // (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// // hue. Available color palettes: https://material.io/design/color/
-// $apl-rpg-quest-primary: mat.define-palette(mat.$indigo-palette);
-// $apl-rpg-quest-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// // The warn palette is optional (defaults to red).
-// $apl-rpg-quest-warn: mat.define-palette(mat.$red-palette);
-
-// // Create the theme object. A theme consists of configurations for individual
-// // theming systems such as "color" or "typography".
-// $apl-rpg-quest-theme: mat.define-light-theme((
-//   color: (
-//     primary: $apl-rpg-quest-primary,
-//     accent: $apl-rpg-quest-accent,
-//     warn: $apl-rpg-quest-warn,
-//   )
-// ));
-
-// // Include theme styles for core and each component used in your app.
-// // Alternatively, you can import and @include the theme mixins for each component
-// // that you are using.
-// @include mat.all-component-themes($apl-rpg-quest-theme);
-
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 html,
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
-// TO-DO
-// Trocar fonte do projeto
-// html, body { height: 100%; }
-// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.container-modal {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin: 0;
+    padding: 0 !important;
+}
