inclusao da home e ajustes de telas do app

--- a/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
+++ b/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
@@ -10,7 +10,7 @@
 }
 
 .forget-password-title {
-    font-size: 2rem;
+    font-size: 2.2rem;
     margin-bottom: 50px;
 }
 
@@ -51,6 +51,10 @@ input {
     margin-top: 10px;
 }
 
+.reset-password-button:hover {
+  background-color: #007bff;
+}
+
 .login-access {
     text-align: center;
     margin-top: 0.5rem;
@@ -58,6 +62,7 @@ input {
     font-weight: bold;
     cursor: pointer;
     margin-top: 30px;
+    font-size: 18px;
 }
 
 .here {
@@ -66,14 +71,18 @@ input {
 
 @media (max-width: 768px) {
     .forget-password-title {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 
     input {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 
     .reset-password-button {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
+
+    .login-access {
+      margin-top: 50px;
+  }
 }
