--- a/src/app/modules/core/authentication/components/login/login.component.scss
+++ b/src/app/modules/core/authentication/components/login/login.component.scss
@@ -1,88 +1,93 @@
 .login-container {
-    background-image: url("/assets/images/common/background-base.png");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  background-image: url("/assets/images/common/background-base.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .login-title {
-    font-size: 2rem;
-    margin-bottom: 50px;
+  font-size: 2.2rem;
+  margin-bottom: 50px;
 }
 
 .logo-image {
-    display: block;
-    margin: 0 auto;
-    width: 150px;
+  display: block;
+  margin: 0 auto;
+  width: 150px;
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
 }
 
 .input-form-login {
-    border-radius: 12px;
-    width: 313.5px;
+  border-radius: 12px;
+  width: 313.5px;
 }
 
 label {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 input {
-    padding: 0.5rem;
-    font-size: 1rem;
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 
 .forgot-password,
 .first-access {
-    text-align: center;
-    margin-top: 0.5rem;
-    color: darkgreen;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 30px;
+  text-align: center;
+  margin-top: 0.5rem;
+  color: darkgreen;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 30px;
+  font-size: 18px;
 }
 
 .register {
-    color: peru;
+  color: peru;
 }
 
 .login-button {
-    padding: 1rem 2rem;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 10px;
-    margin-top: 10px;
-    font-weight: bold;
-    cursor: pointer;
+  padding: 1rem 2rem;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background-color: #007bff;
 }
 
 @media (max-width: 768px) {
-    .login-title {
-        font-size: 1.5rem;
-    }
+  .login-title {
+    font-size: 2rem;
+  }
 
-    input {
-        font-size: 0.8rem;
-    }
+  input {
+    font-size: 1rem;
+  }
 
-    .login-button {
-        font-size: 1rem;
-    }
+  .login-button {
+    font-size: 1.2srem;
+  }
 }
