--- a/src/app/modules/core/authentication/components/register/register.component.scss
+++ b/src/app/modules/core/authentication/components/register/register.component.scss
@@ -10,7 +10,7 @@
 }
 
 .register-title {
-    font-size: 2rem;
+    font-size: 2.2rem;
     margin-bottom: 50px;
 }
 
@@ -56,6 +56,7 @@ input {
     font-weight: bold;
     cursor: pointer;
     margin-top: 30px;
+    font-size: 18px;
 }
 
 .register {
@@ -72,16 +73,20 @@ input {
     margin-top: 10px;
 }
 
+.register-button:hover {
+  background-color: #007bff;
+}
+
 @media (max-width: 768px) {
     .register-title {
-        font-size: 1.5rem;
+      font-size: 2rem;
     }
 
     input {
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 
     .register-button {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 }
