criacao de loader para tela

--- a/src/app/modules/core/authentication/components/login/login.component.html
+++ b/src/app/modules/core/authentication/components/login/login.component.html
@@ -16,6 +16,6 @@
         <div class="forgot-password" (click)="goForgetPassword()">Esqueci minha senha</div>
         <div class="first-access" (click)="goToRegister()">Primeiro acesso? <span class="register">Cadastre-se</span></div>
       </div>
+      <div *ngIf="loading" class="loader"></div>
     </form>
   </div>
-  
