--- a/src/app/modules/shared/components/modal-info/modal-info.component.html
+++ b/src/app/modules/shared/components/modal-info/modal-info.component.html
@@ -1,7 +1,7 @@
 <div class="modal-info-container">
     <div class="box__modal">
         <div class="close-modal__right" *ngIf="!data.image">
-            <mat-icon class="modal__icon" (click)="closeModal()">close</mat-icon>
+            <mat-icon class="modal__icon" (click)="closeModal('')">close</mat-icon>
         </div>
         <div *ngIf="data.image" class="modal__image">
             <img [src]="data.image">
@@ -13,8 +13,9 @@
             <span [innerHTML]="data.text"></span>
         </div>
         <div class="container-modal__footer">
-            <button type="submit" class="modal-footer__button" (click)="closeModal()" [ngClass]="{'width100' : !data}">
-                {{buttonText}}</button>
+          <button type="submit" class="modal-footer__button" (click)="closeModal('OK')" [ngClass]="{'width100' : !data}">
+            {{buttonText}}</button>
+          <button *ngIf="buttonText2" class="modal-footer__button-2" (click)="closeModal('')">{{buttonText2}}</button>
         </div>
     </div>
 </div>
