inclusao de nova tela de regras do jogos e ajustes gerais de css na aplicacao inteira

--- a/src/app/modules/core/authentication/components/forget-password/forget-password.component.html
+++ b/src/app/modules/core/authentication/components/forget-password/forget-password.component.html
@@ -2,7 +2,7 @@
   <h2 class="forget-password-title">Esqueceu sua senha?</h2>
   <form class="forget-password-form" (submit)="resetPassword($event, emailInput.value)">
     <div class="form-group">
-      <label for="email">E-mail</label>
+      <label class="email-label" for="email">E-mail</label>
       <input class="input-form-forget-password" type="email" id="email" name="email" placeholder="Digite seu e-mail"
         #emailInput required>
     </div>
