--- a/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
+++ b/src/app/modules/core/authentication/components/forget-password/forget-password.component.scss
@@ -1,54 +1,51 @@
 .forget-password-container {
-    background-image: url("/assets/images/common/background-base.png");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  background-image: url("/assets/images/common/background-base.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .forget-password-title {
-    font-size: 2.2rem;
-    margin-bottom: 50px;
+  font-size: 2.2rem;
+  margin-bottom: 50px;
 }
 
 .forget-password-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
 }
 
 .input-form-forget-password {
-    border-radius: 12px;
-    width: 313.5px;
+  border-radius: 12px;
+  width: 313.5px;
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 
-label {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-}
-
-input {
-    padding: 0.5rem;
-    font-size: 1rem;
+.email-label {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .reset-password-button {
-    padding: 1rem 2rem;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 10px;
-    margin-top: 10px;
+  padding: 1rem 2rem;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .reset-password-button:hover {
@@ -56,33 +53,25 @@ input {
 }
 
 .login-access {
-    text-align: center;
-    margin-top: 0.5rem;
-    color: darkgreen;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 30px;
-    font-size: 18px;
+  text-align: center;
+  margin-top: 0.5rem;
+  color: darkgreen;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 30px;
+  font-size: 20px;
 }
 
 .here {
-    color: peru;
+  color: peru;
 }
 
 @media (max-width: 768px) {
-    .forget-password-title {
-        font-size: 2rem;
-    }
+  .forget-password-title {
+    font-size: 2rem;
+  }
 
-    input {
-        font-size: 1rem;
-    }
-
-    .reset-password-button {
-        font-size: 1.2rem;
-    }
-
-    .login-access {
-      margin-top: 50px;
+  .login-access {
+    margin-top: 50px;
   }
 }
