--- a/src/app/modules/core/authentication/components/login/login.component.scss
+++ b/src/app/modules/core/authentication/components/login/login.component.scss
@@ -35,16 +35,13 @@
 .input-form-login {
   border-radius: 12px;
   width: 313.5px;
-}
-
-label {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-input {
   padding: 0.5rem;
   font-size: 1rem;
+}
+
+.inputs-labels {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .forgot-password,
@@ -55,7 +52,7 @@ input {
   font-weight: bold;
   cursor: pointer;
   margin-top: 30px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .register {
@@ -78,42 +75,12 @@ input {
   background-color: #007bff;
 }
 
-.loader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100px;
-  color: #333;
-  font-weight: bold;
-}
-
-.loader::after {
-  content: "";
-  display: block;
-  width: 40px;
-  height: 40px;
-  border: 4px solid #333;
-  border-top-color: transparent;
-  border-radius: 50%;
-  animation: spinner 1s linear infinite;
-}
-
-@keyframes spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 @media (max-width: 768px) {
   .login-title {
     font-size: 2rem;
   }
 
-  input {
+  .inputs-labels {
     font-size: 1rem;
   }
 
