--- a/src/app/modules/home/components/create-profile/create-profile.component.scss
+++ b/src/app/modules/home/components/create-profile/create-profile.component.scss
@@ -1,55 +1,51 @@
 .create-profile-container {
-    background-image: url("/assets/images/common/background-base.png");
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  background-image: url("/assets/images/common/background-base.png");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .create-profile-title {
-    font-size: 2.2rem;
-    margin-bottom: 50px;
+  font-size: 2.2rem;
+  margin-bottom: 50px;
 }
 
 .create-profile-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
 }
 
 .input-form-create-profile {
-    border-radius: 12px;
-    width: 313.5px;
+  border-radius: 12px;
+  width: 313.5px;
+  padding: 0.5rem;
+  font-size: 1rem;
 }
 
-label {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-}
-
-input,
-select {
-    padding: 0.5rem;
-    font-size: 1rem;
+.inputs-labels {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .create-profile-button {
-    padding: 1rem 2rem;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 1.2rem;
-    border: none;
-    border-radius: 10px;
-    margin-top: 10px;
+  padding: 1rem 2rem;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .create-profile-button:hover {
@@ -57,15 +53,11 @@ select {
 }
 
 @media (max-width: 768px) {
-    .create-profile-title {
-        font-size: 2rem;
-    }
+  .create-profile-title {
+    font-size: 2rem;
+  }
 
-    input {
-        font-size: 1rem;
-    }
-
-    .create-profile-button {
-        font-size: 1.2rem;
-    }
+  .create-profile-button {
+    font-size: 1.2rem;
+  }
 }
