--- a/src/app/modules/initiation/components/welcome/welcome.component.html
+++ b/src/app/modules/initiation/components/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="welcome-container">
-    <div class="container">
+    <div class="sub-container">
         <img class="logo-image" src="/assets/images/login/estudante.png" alt="Logo">
         <h1 class="title-rpg">Olá! Seja bem-vindo ao jogo Trilhas da Sabedoria!</h1>
 
