--- a/src/app/modules/initiation/components/welcome/welcome.component.scss
+++ b/src/app/modules/initiation/components/welcome/welcome.component.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
 }
 
-.container {
+.sub-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -39,11 +39,6 @@
   margin-bottom: 30px;
 }
 
-h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-
 .button-to-start {
   padding: 1rem 2rem;
   background-color: #4CAF50;
@@ -70,10 +65,6 @@ h1 {
 }
 
 @media (max-width: 768px) {
-  h1 {
-    font-size: 1.5rem;
-  }
-
   .button {
     padding: 0.8rem 1.6rem;
     font-size: 1rem;
