nova diretiva de validar 2 digitos para idade e novos ajustes

--- a/src/app/modules/home/components/game-rules/game-rules.component.scss
+++ b/src/app/modules/home/components/game-rules/game-rules.component.scss
@@ -68,7 +68,9 @@
   }
 
   .box-group {
-    padding: 10px;
+    padding: 5px;
+    align-items: unset;
+    margin-bottom: 0.5rem;
   }
 
   .info-text {
