--- a/src/app/modules/home/components/create-profile/create-profile.component.html
+++ b/src/app/modules/home/components/create-profile/create-profile.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="form-group">
         <label class="inputs-labels" for="age">Idade</label>
-        <input class="input-form-create-profile" type="number" id="age" name="age" placeholder="Digite sua idade" #ageInput required>
+        <input class="input-form-create-profile" type="number" id="age" name="age" placeholder="Digite sua idade" #ageInput maxTwoDigits required>
       </div>
       <div class="form-group">
         <label class="inputs-labels" for="gender">Gênero</label>
