--- a/src/app/modules/home/components/profile/profile.component.html
+++ b/src/app/modules/home/components/profile/profile.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
       <label class="inputs-labels" for="age">Idade</label>
-      <input class="input-form-profile" type="number" id="age" name="age" [(ngModel)]="user.age" [attr.disabled]="!editMode ? 'disabled' : null" [placeholder]="editMode ? 'Digite a idade' : ''">
+      <input class="input-form-profile" type="number" id="age" name="age" [(ngModel)]="user.age" [attr.disabled]="!editMode ? 'disabled' : null" [placeholder]="editMode ? 'Digite a idade' : ''" maxTwoDigits>
     </div>
     <div class="form-group">
       <label class="inputs-labels" for="gender">Gênero</label>
