novas funcionadades e ajustes gerais

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -13,6 +13,7 @@
     <button (click)="viewCurrentPerformance()" class="main-buttons"><i class="fas fa-trophy"></i> Desempenho Atual</button>
     <button (click)="viewProfile()" class="main-buttons"><i class="fas fa-user"></i> Perfil</button>
     <button (click)="viewGameRules()" class="main-buttons"><i class="fas fa-info-circle"></i> Regras do Jogo</button>
+    <button class="main-buttons"><i class="fas fa-comment"></i> Feedback</button>
   </div>
 
   <div class="login-access" (click)="goToLogin()">Se deseja sair do jogo, <span class="here">clique aqui</span></div>
