--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -12,7 +12,7 @@
 .home-title {
   font-size: 2rem;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .logo-image {
@@ -24,7 +24,7 @@
 .welcome-home {
   text-align: center;
   font-size: 1.5rem;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .home-sub-title {
@@ -45,7 +45,7 @@
   font-size: 1.2rem;
   border: none;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   cursor: pointer;
 }
 
@@ -72,19 +72,23 @@
   .home-title {
     font-size: 2rem;
     padding: 2px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
 
   .welcome-home {
     text-align: center;
     font-size: 1.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
   }
 
   .home-sub-title {
     font-size: 1.2rem;
     padding: 2px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+  }
+
+  .main-buttons {
+    margin-bottom: 12px;
   }
 
   .login-access {
