--- a/src/app/modules/home/components/subject-overview/subject-overview.component.html
+++ b/src/app/modules/home/components/subject-overview/subject-overview.component.html
@@ -1,1 +1,16 @@
-<p>subject-overview works!</p>
+<div class="subject-overview">
+  <h2 class="title">Introdução</h2>
+  <h2 class="subject">{{ title }}</h2>
+
+  <div class="content">
+    <p class="text-overview">
+      {{ overview }}
+    </p>
+
+    <h3 class="sub-title">Assuntos que abordaremos:</h3>
+
+    <ul>
+      <li class="sub-topics" *ngFor="let topic of subTopics">{{ topic }}</li>
+    </ul>
+  </div>
+</div>
