--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,29 @@ body {
   animation: spinner 1s linear infinite;
 }
 
+.loader-menu_itens {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader-menu_itens::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  border: 4px solid #333;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: spinner 1s linear infinite;
+}
+
 @keyframes spinner {
   0% {
     transform: rotate(0deg);
