--- a/src/app/modules/home/components/feedback/feedback.component.html
+++ b/src/app/modules/home/components/feedback/feedback.component.html
@@ -44,4 +44,5 @@
     <button class="feedback-button" type="submit">Enviar</button>
   </form>
   <div class="home-access" (click)="goToHome()">Para voltar à home, <span class="here">clique aqui</span></div>
+  <div *ngIf="loading" class="loader"></div>
 </div>
