--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,30 @@ body {
     padding: 0 !important;
 }
 
+.login-access {
+  text-align: center;
+  margin-top: 0.5rem;
+  color: darkgreen;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.home-access {
+  text-align: center;
+  margin-top: 0.5rem;
+  color: darkgreen;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.here {
+  color: peru;
+}
+
 .loader {
   display: flex;
   align-items: center;
