--- a/src/app/modules/home/components/game-rules/game-rules.component.html
+++ b/src/app/modules/home/components/game-rules/game-rules.component.html
@@ -3,7 +3,7 @@
   <div class="game-rules-details">
     <label class="sub-title"><i class="fas fa-clipboard"></i> Geral:</label>
     <div class="box-group">
-      <p class="info-text"><i class="fas fa-info-circle"></i> O jogador terá que efetuar os estudos e as atividades antes de realizar a prova final.</p>
+      <p class="info-text"><i class="fas fa-info-circle"></i> O jogador terá que efetuar os estudos e as atividades antes de realizar alguma prova.</p>
       <p class="info-text"><i class="fas fa-info-circle"></i> Os estudos e as atividades ficam localizados em: <b>Menu > Trilhas para Estudo</b></p>
       <p class="info-text"><i class="fas fa-info-circle"></i> Caso o jogador clique em: <b>Menu >  Recomeçar do Zero</b> irá zerar toda sua pontuação feita no jogo.</p>
     </div>
