--- a/src/app/modules/exercises/components/exercises/exercises.component.scss
+++ b/src/app/modules/exercises/components/exercises/exercises.component.scss
@@ -1,23 +1,82 @@
-div {
-    margin: 20px;
-    padding: 10px;
-    background-color: lightgray;
+.question-container {
+  background-image: url("/assets/images/common/background-base.png");
+  background-size: cover;
+  height: 100vh;
+  background-position: center;
+  padding: 32px;
+  font-size: 25px;
 }
 
-h1 {
+.question-title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+  margin-top: 30px;
+}
+
+.question {
+  margin-bottom: 30px;
+}
+
+.question-text {
+  font-weight: bold;
+  color: darkslategray;
+  line-height: 1.2;
+}
+
+.options {
+  margin-top: 10px;
+}
+
+.option-label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.option-text {
+  margin-left: 5px;
+}
+
+.question-feedback-correct {
+  margin-top: 20px;
+  color: darkblue;
+}
+
+.question-feedback-incorrect {
+  margin-top: 20px;
+  color: red;
+}
+
+.action-button {
+  display: block;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  background-color: indigo;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.action-button:hover {
+  background-color: #45a049;
+}
+
+@media (max-width: 768px) {
+
+  .question-text {
+    line-height: 1.1;
+    text-align: justify;
+  }
+
+  .options {
+    margin-top: 20px;
+  }
+
+  .option-text {
     font-size: 24px;
-    color: #333;
-}
+  }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    margin-bottom: 5px;
-}
-
-button {
-    margin-top: 10px;
 }
