--- a/src/app/modules/home/components/feedback/feedback.component.html
+++ b/src/app/modules/home/components/feedback/feedback.component.html
@@ -1,5 +1,7 @@
 <div class="feedback-container">
-  <h2 class="feedback-title">Feedback</h2>
+  <h2 class="feedback-title">
+    <img class="logo-image" src="/assets/images/feedback/feedback.png" alt="Logo"> Feedback
+  </h2>
   <form [formGroup]="feedbackForm" (ngSubmit)="submitFeedback()" class="feedback-form">
     <div class="form-group">
       <label class="feedback-label">Nota</label>
