--- a/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.scss
+++ b/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.scss
@@ -1,4 +1,4 @@
-.performance-container {
+.performance-details-container {
   background-image: url("/assets/images/common/background-base.png");
   background-size: cover;
   background-position: center;
@@ -10,7 +10,7 @@
   padding: 0 32px 0 32px;
 }
 
-.performance-title {
+.performance-details-title {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 30px;
@@ -20,12 +20,6 @@
   display: block;
   margin: 0 auto;
   width: 150px;
-}
-
-.performance-sub-title {
-  font-size: 1.5rem;
-  text-align: center;
-  margin-bottom: 30px;
 }
 
 .subjects-section {
@@ -49,7 +43,6 @@
   font-size: 1.2rem;
   border: none;
   border-radius: 10px;
-  cursor: pointer;
   display: flex;
   align-items: center;
   width: 300px;
@@ -58,10 +51,6 @@
 
 .subject-button i {
   margin-right: 10px;
-}
-
-.subject-button:hover {
-  background-color: #45a049;
 }
 
 .progress {
@@ -73,42 +62,23 @@
   transform: translateY(-50%);
 }
 
-.no-data-message {
-  font-weight: bold;
-  font-size: 27px;
-  display: flex;
-  text-align: center;
-  line-height: 1.2;
-  margin-bottom: 15px;
-}
-
 .select-subject-message {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: bold;
 }
 
-.home-access {
+.goBack {
   margin-top: 30px;
 }
 
-.here {
-  color: darkolivegreen;
-}
-
 @media (max-width: 768px) {
-  .performance-title {
+  .performance-details-title {
     font-size: 30px;
     padding: 2px;
   }
 
   .logo-image {
     width: 120px;
-  }
-
-  .performance-sub-title {
-    font-size: 1.2rem;
-    padding: 2px;
-    margin-bottom: 15px;
   }
 
   .subjects-section {
@@ -124,11 +94,7 @@
     font-size: 1.1rem;
   }
 
-  .home-access {
+  .goBack {
     margin-top: 20px;
-  }
-
-  .here {
-    color: darkolivegreen;
   }
 }
