--- a/src/app/modules/home/components/subject-overview/subject-overview.component.html
+++ b/src/app/modules/home/components/subject-overview/subject-overview.component.html
@@ -7,7 +7,10 @@
       {{ overview }}
     </p>
 
-    <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    <div class="buttons-section">
+      <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    </div>
+
   </div>
 </div>
 
@@ -24,5 +27,69 @@
       <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
     </div>
 
+  </div>
+</div>
+
+<div class="subject-overview" *ngIf="currentPage === 3">
+  <h2 class="title">{{ details[0].name }}</h2>
+  <div class="content">
+    <p class="text-overview">
+      {{ details[0].description }}
+    </p>
+    <p class="text-overview-example">
+      {{ details[0].example }}
+    </p>
+    <div class="buttons-section">
+      <button class="actions-button-pages" (click)="previousPage()">Voltar</button>
+      <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    </div>
+  </div>
+</div>
+
+<div class="subject-overview" *ngIf="currentPage === 4">
+  <h2 class="title">{{ details[1].name }}</h2>
+  <div class="content">
+    <p class="text-overview">
+      {{ details[1].description }}
+    </p>
+    <p class="text-overview-example">
+      {{ details[1].example }}
+    </p>
+    <div class="buttons-section">
+      <button class="actions-button-pages" (click)="previousPage()">Voltar</button>
+      <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    </div>
+  </div>
+</div>
+
+<div class="subject-overview" *ngIf="currentPage === 5">
+  <h2 class="title">{{ details[2].name }}</h2>
+  <div class="content">
+    <p class="text-overview">
+      {{ details[2].description }}
+    </p>
+    <p class="text-overview-example">
+      {{ details[2].example }}
+    </p>
+    <div class="buttons-section">
+      <button class="actions-button-pages" (click)="previousPage()">Voltar</button>
+      <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    </div>
+  </div>
+</div>
+
+<div class="subject-overview" *ngIf="currentPage === 6">
+  <h2 class="title">{{ details[3].name }}</h2>
+  <div class="content">
+    <p class="text-overview">
+      {{ details[3].description }}
+    </p>
+    <p class="text-overview-example">
+      {{ details[3].example }}
+    </p>
+    <div class="buttons-section">
+      <button class="actions-button-pages" (click)="previousPage()">Voltar</button>
+      <button class="actions-button-pages" (click)="nextPage()">Avançar</button>
+    </div>
   </div>
 </div>
