--- a/src/app/modules/home/components/subject-overview/subject-overview.component.scss
+++ b/src/app/modules/home/components/subject-overview/subject-overview.component.scss
@@ -7,6 +7,7 @@
   padding: 0 32px 0 32px;
   font-size: 25px;
   overflow: hidden !important;
+  font-size: 30px;
 }
 
 .title {
@@ -36,6 +37,11 @@
   line-height: 1.3;
 }
 
+.text-overview-example {
+  line-height: 1.3;
+  font-weight: 500;
+}
+
 .sub-title {
   display: flex;
   justify-content: center;
@@ -54,6 +60,11 @@
 .buttons-section {
   display: flex;
   justify-content: space-around;
+  position: absolute;
+  bottom: 20px;
+  align-items: center;
+  left: 50%;
+  right: 50%;
 }
 
 .actions-button-pages {
@@ -67,6 +78,7 @@
   border-radius: 10px;
   cursor: pointer;
   margin-top: 40px;
+  margin-left: 10px;
 }
 
 .actions-button-pages:hover {
@@ -77,17 +89,33 @@
 
   .subject-overview {
     padding: 0 16px 0 16px;
-    font-size: 18px;
+    font-size: 20px;
   }
 
   .subject-overview-subTopics {
     padding: 0px 32px 0 8px;
-    font-size: 18px;
+    font-size: 20px;
+  }
+
+  .title {
+    text-align: unset;
   }
 
   .sub-title {
     margin-bottom: 20px;
     margin-top: 20px;
+  }
+
+}
+
+@media (max-width: 375px) {
+
+  .subject-overview {
+    font-size: 18px;
+  }
+
+  .subject-overview-subTopics {
+    font-size: 18px;
   }
 
 }
