ajustes de layout, ajustes de validacoes das regras do jogo, e ajustes em diversas funcionalidades

--- a/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.html
+++ b/src/app/modules/current-performance/components/current-performance-details/current-performance-details.component.html
@@ -8,7 +8,7 @@
     Detalhes de Desempenho
   </h2>
 
-  <h3 class="performance-details-title">{{ objSelectedPerformance?.subject }}</h3>
+  <h3 class="performance-details-title">{{ subjectTranslated }}</h3>
 
   <div class="subjects-section">
     <div class="subject">
