--- a/src/app/modules/current-performance/components/current-performance/current-performance.component.scss
+++ b/src/app/modules/current-performance/components/current-performance/current-performance.component.scss
@@ -82,6 +82,10 @@
   margin-bottom: 15px;
 }
 
+.fa-info-circle {
+  margin-right: 5px;
+}
+
 .select-subject-message {
   font-size: 14px;
   font-weight: bold;
