--- a/src/app/modules/home/components/feedback/feedback.component.html
+++ b/src/app/modules/home/components/feedback/feedback.component.html
@@ -43,6 +43,11 @@
       <textarea class="feedback-input" name="suggestion" formControlName="suggestion"></textarea>
     </div>
     <label class="feedback-error">{{messageError}}</label>
+
+    <p>
+      <i class="fas fa-info-circle"></i><b>Legenda: </b> <b>0</b> - Nada Satisfeito / <b>5</b> - Muito Satisfeito
+    </p>
+
     <button class="feedback-button" type="submit">Enviar</button>
   </form>
   <div class="home-access" (click)="goToHome()">Para voltar à home, <span class="here">clique aqui</span></div>
