--- a/src/app/modules/home/components/feedback/feedback.component.scss
+++ b/src/app/modules/home/components/feedback/feedback.component.scss
@@ -115,6 +115,10 @@
   margin-bottom: 0.5rem;
 }
 
+.fa-info-circle {
+  margin-right: 5px;
+}
+
 .feedback-button {
   padding: 1rem 2rem;
   background-color: #4CAF50;
