--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -9,7 +9,7 @@
   <div class="buttons-section">
     <button (click)="studyPaths()" class="main-buttons"><i class="fas fa-book"></i> Trilhas para Estudo</button>
     <button (click)="takeExams()" class="main-buttons"><i class="fas fa-pencil-alt"></i><div *ngIf="loading" class="loader-complete"></div> Realizar Provas</button>
-    <button class="main-buttons"><i class="fas fa-redo"></i> Recomeçar do Zero</button>
+    <button (click)="restartFromZero()" class="main-buttons"><i class="fas fa-redo"></i><div *ngIf="loading" class="loader-complete"></div>  Recomeçar do Zero</button>
     <button (click)="viewCurrentPerformance()" class="main-buttons"><i class="fas fa-trophy"></i> Desempenho Atual</button>
     <button (click)="viewProfile()" class="main-buttons"><i class="fas fa-user"></i> Perfil</button>
     <button (click)="viewGameRules()" class="main-buttons"><i class="fas fa-info-circle"></i> Regras do Jogo</button>
